{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 1,
  "lineage": "00000000-0000-4000-8000-000000000000",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:123456789012:ec2_transit_gateway/tgw-0712643add85e4d97",
            "association_default_route_table_id": "c8ea26c21ab582",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "estate",
            "dns_support": "enable",
            "id": "tgw-0712643add85e4d97",
            "multicast_support": "disable",
            "owner_id": "d202fc4de9584c",
            "propagation_default_route_table_id": "827406d9b74542",
            "region": "us-east-1",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "estate"
            },
            "tags_all": {
              "Name": "estate"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:us-east-1:123456789012:ec2_transit_gateway_vpc_attachment/tgw-attach-0246f7e8e73a8d56b",
            "dns_support": "enable",
            "id": "tgw-attach-0246f7e8e73a8d56b",
            "ipv6_support": "disable",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-04e484eb0475311c8",
              "subnet-0e1f448daada6aa2b"
            ],
            "tags": {
              "Name": "estate-app"
            },
            "tags_all": {
              "Name": "estate-app"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-0712643add85e4d97",
            "vpc_id": "vpc-0d727340b00ba37c7",
            "vpc_owner_id": "cbf0d276e8cd65"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:us-east-1:123456789012:ec2_transit_gateway_vpc_attachment/tgw-attach-0454f24a1d47ce471",
            "dns_support": "enable",
            "id": "tgw-attach-0454f24a1d47ce471",
            "ipv6_support": "disable",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-0855b1ea6d058ca3d",
              "subnet-0faf97c7736988f3c"
            ],
            "tags": {
              "Name": "estate-data"
            },
            "tags_all": {
              "Name": "estate-data"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-0712643add85e4d97",
            "vpc_id": "vpc-034177ef24c4ac66e",
            "vpc_owner_id": "a237b32f1dba33"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "0b3f28c0e3f79a",
            "arn": "arn:aws:eip:us-east-1:123456789012:eip/eipalloc-0fa28787d3dff6e23",
            "association_id": "f4479e5fe3cb96",
            "domain": "vpc",
            "id": "eipalloc-0fa28787d3dff6e23",
            "ipam_pool_id": "7f413397bfc8fd",
            "region": "us-east-1",
            "tags": {
              "Name": "estate-app-nat-us-east-1a"
            },
            "tags_all": {
              "Name": "estate-app-nat-us-east-1a"
            }
          },
          "index_key": 0
        },
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "2b359a4f602925",
            "arn": "arn:aws:eip:us-east-1:123456789012:eip/eipalloc-0e3c7314cfd1e06a4",
            "association_id": "ca4df8b18cf8ff",
            "domain": "vpc",
            "id": "eipalloc-0e3c7314cfd1e06a4",
            "ipam_pool_id": "4bc6797a911051",
            "region": "us-east-1",
            "tags": {
              "Name": "estate-app-nat-us-east-1b"
            },
            "tags_all": {
              "Name": "estate-app-nat-us-east-1b"
            }
          },
          "index_key": 1
        }
      ],
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:instance:us-east-1:123456789012:instance/i-0b41118754fb8f173",
            "associate_public_ip_address": false,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enable_primary_ipv6": false,
            "force_destroy": false,
            "get_password_data": false,
            "host_id": "375ad5dafe5d4a",
            "host_resource_group_arn": "arn:aws:instance:us-east-1:123456789012:6441b8e504b0",
            "iam_instance_profile": "estate-app",
            "id": "i-0b41118754fb8f173",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "19e7cc44f22f2f",
            "monitoring": false,
            "outpost_arn": "arn:aws:instance:us-east-1:123456789012:627c1fe2f7f1",
            "placement_group_id": "9b86e3d437b502",
            "placement_partition_number": 0,
            "primary_network_interface_id": "cdb07f2ac02666",
            "region": "us-east-1",
            "source_dest_check": true,
            "spot_instance_request_id": "3919b24c2dd86d",
            "subnet_id": "subnet-04e484eb0475311c8",
            "tags": {
              "Name": "estate-app-us-east-1a"
            },
            "tags_all": {
              "Name": "estate-app-us-east-1a"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f4e14e106d7ef990"
            ]
          },
          "index_key": 0
        },
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:instance:us-east-1:123456789012:instance/i-07b070df6318418ee",
            "associate_public_ip_address": false,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enable_primary_ipv6": false,
            "force_destroy": false,
            "get_password_data": false,
            "host_id": "6a2036bbcf847f",
            "host_resource_group_arn": "arn:aws:instance:us-east-1:123456789012:287645005b57",
            "iam_instance_profile": "estate-app",
            "id": "i-07b070df6318418ee",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "003a1b38d303a2",
            "monitoring": false,
            "outpost_arn": "arn:aws:instance:us-east-1:123456789012:8b0effdb8fe0",
            "placement_group_id": "578c5054ac2cbb",
            "placement_partition_number": 0,
            "primary_network_interface_id": "b2365afc7d0b9e",
            "region": "us-east-1",
            "source_dest_check": true,
            "spot_instance_request_id": "508f857719d24c",
            "subnet_id": "subnet-0e1f448daada6aa2b",
            "tags": {
              "Name": "estate-app-us-east-1b"
            },
            "tags_all": {
              "Name": "estate-app-us-east-1b"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f4e14e106d7ef990"
            ]
          },
          "index_key": 1
        }
      ],
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:internet:us-east-1:123456789012:internet_gateway/igw-024cc6666c26c5be7",
            "id": "igw-024cc6666c26c5be7",
            "owner_id": "c662fa8d3be250",
            "region": "us-east-1",
            "tags": {
              "Name": "estate-app"
            },
            "tags_all": {
              "Name": "estate-app"
            },
            "vpc_id": "vpc-0d727340b00ba37c7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:loadbalancer/app/b68bfb8f",
            "arn_suffix": "449d784c39b204",
            "dns_name": "09e96ee51628ad",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:123456789012:loadbalancer/app/b68bfb8f",
            "internal": true,
            "load_balancer_type": "network",
            "name": "estate-internal",
            "region": "us-east-1",
            "secondary_ips_auto_assigned_per_subnet": 0,
            "subnets": [
              "subnet-04e484eb0475311c8",
              "subnet-0e1f448daada6aa2b"
            ],
            "tags": {
              "Name": "estate-internal"
            },
            "tags_all": {
              "Name": "estate-internal"
            },
            "vpc_id": "800ee96b4e9508",
            "zone_id": "48b4e43e4d477c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:loadbalancer/app/22db8eb4",
            "arn_suffix": "7021592b987c7b",
            "client_keep_alive": 3600,
            "desync_mitigation_mode": "defensive",
            "dns_name": "03ba6087176a6f",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:123456789012:loadbalancer/app/22db8eb4",
            "idle_timeout": 60,
            "internal": false,
            "load_balancer_type": "application",
            "name": "estate-public",
            "preserve_host_header": false,
            "region": "us-east-1",
            "secondary_ips_auto_assigned_per_subnet": 0,
            "security_groups": [
              "sg-08ceb6078c7bc0c9f"
            ],
            "subnets": [
              "subnet-057e2d26fd8dc1046",
              "subnet-0c8de3fa67400178a"
            ],
            "tags": {
              "Name": "estate-public"
            },
            "tags_all": {
              "Name": "estate-public"
            },
            "vpc_id": "5f20f4db4540f4",
            "xff_header_processing_mode": "append",
            "zone_id": "eb6de171c75ee5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:listener/app/5ebf96a5",
            "certificate_arn": "arn:aws:acm:us-east-1:123456789012:acm_certificate/ed97230896cef27ef865",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 0,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:targetgroup/0729cca6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:123456789012:listener/app/5ebf96a5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:loadbalancer/app/22db8eb4",
            "mutual_authentication": [],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "2a64d7b9321fcb",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "30b6e3dd6ec2f3",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "1d7e402890f1f8",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "75f2a9cdb5d16a",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "7734f89b6a6e39",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "248697c67df8c0",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "0e7d400499d068",
            "routing_http_request_x_amzn_tls_version_header_name": "caa0b70c78ee4e",
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": 0,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:listener/app/1ccd5fb3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 0,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:targetgroup/a3260d2f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:123456789012:listener/app/1ccd5fb3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:loadbalancer/app/b68bfb8f",
            "mutual_authentication": [],
            "port": 5432,
            "protocol": "TCP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "47b43bd0200daa",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "d8afbe514c2fb3",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "decc9dd7c8c0f1",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "e5a21075543f95",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "0a0f022318f5be",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "5d06d043e2e8da",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "4cc4a057d5a8f1",
            "routing_http_request_x_amzn_tls_version_header_name": "c724f72afa1702",
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": null,
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": 0,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:listener/app/553807c6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": null,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": null,
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:123456789012:listener/app/553807c6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:loadbalancer/app/22db8eb4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "07371df2540636",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "a2b926cc494e94",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "43f23284401150",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "2a4429222280d2",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "dab772b0154d7c",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "88b4c5e1f71515",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "7ec706a794cdbb",
            "routing_http_request_x_amzn_tls_version_header_name": "2ad1c5de6e1d99",
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": null,
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": 0,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": null,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:targetgroup/78982b9d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:listener-rule/app/b98c0594",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:123456789012:listener-rule/app/b98c0594",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:listener/app/5ebf96a5",
            "priority": 100,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:targetgroup/78982b9d",
            "arn_suffix": "83c50eaf1e8da2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "path": "/api/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:123456789012:targetgroup/78982b9d",
            "lambda_multi_value_headers_enabled": false,
            "name": "estate-api",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "tags": {
              "Name": "estate-api"
            },
            "tags_all": {
              "Name": "estate-api"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0d727340b00ba37c7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:targetgroup/a3260d2f",
            "arn_suffix": "f0e6d18e0eadac",
            "connection_termination": false,
            "deregistration_delay": "300",
            "id": "arn:aws:elasticloadbalancing:us-east-1:123456789012:targetgroup/a3260d2f",
            "lambda_multi_value_headers_enabled": false,
            "name": "estate-internal",
            "port": 5432,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "tags": {
              "Name": "estate-internal"
            },
            "tags_all": {
              "Name": "estate-internal"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0d727340b00ba37c7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:targetgroup/0729cca6",
            "arn_suffix": "0adcba3c8eb6ec",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:123456789012:targetgroup/0729cca6",
            "lambda_multi_value_headers_enabled": false,
            "name": "estate-worker",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "tags": {
              "Name": "estate-worker"
            },
            "tags_all": {
              "Name": "estate-worker"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0d727340b00ba37c7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa28787d3dff6e23",
            "association_id": "e9f486f5dfa4a7",
            "connectivity_type": "public",
            "id": "nat-04f9eccf8d0e7812d",
            "network_interface_id": "1137aad1eb2bae",
            "region": "us-east-1",
            "route_table_id": "aacec905b7fc17",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c8de3fa67400178a",
            "tags": {
              "Name": "estate-app-us-east-1a"
            },
            "tags_all": {
              "Name": "estate-app-us-east-1a"
            },
            "vpc_id": "c4f52a216918e2"
          },
          "index_key": 0
        },
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e3c7314cfd1e06a4",
            "association_id": "bc9ae7bea8519a",
            "connectivity_type": "public",
            "id": "nat-0bd42c25eacd37dc6",
            "network_interface_id": "2e4677b6874a41",
            "region": "us-east-1",
            "route_table_id": "64e6f2f6f1cf14",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-057e2d26fd8dc1046",
            "tags": {
              "Name": "estate-app-us-east-1b"
            },
            "tags_all": {
              "Name": "estate-app-us-east-1b"
            },
            "vpc_id": "c4065e607c194b"
          },
          "index_key": 1
        }
      ],
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "app_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:network:us-east-1:123456789012:network_acl/acl-09636ddb19eea0c5c",
            "egress": [],
            "id": "acl-09636ddb19eea0c5c",
            "ingress": [],
            "owner_id": "1d26f0c21c2f13",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-04e484eb0475311c8",
              "subnet-0e1f448daada6aa2b"
            ],
            "tags": {
              "Name": "estate-app-private"
            },
            "tags_all": {
              "Name": "estate-app-private"
            },
            "vpc_id": "vpc-0d727340b00ba37c7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "app_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": null,
            "core_network_arn": null,
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "egress_only_gateway_id": null,
            "gateway_id": null,
            "id": "5c63abe99e0b777ce417",
            "instance_id": "9e37bd915a27c5",
            "instance_owner_id": "2c109e8b1d93df",
            "local_gateway_id": null,
            "nat_gateway_id": "nat-04f9eccf8d0e7812d",
            "network_interface_id": "35be871df2511e",
            "odb_network_arn": null,
            "origin": null,
            "region": "us-east-1",
            "route_table_id": "rtb-01ec5a542a3ff4dc0",
            "state": null,
            "timeouts": null,
            "transit_gateway_id": null,
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": null
          },
          "sensitive_attributes": [],
          "index_key": 0
        },
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": null,
            "core_network_arn": null,
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "egress_only_gateway_id": null,
            "gateway_id": null,
            "id": "6eada2b41f0f1cceec90",
            "instance_id": "35153fce2666ce",
            "instance_owner_id": "a3208408348dd0",
            "local_gateway_id": null,
            "nat_gateway_id": "nat-0bd42c25eacd37dc6",
            "network_interface_id": "8fe84fdfa726ca",
            "odb_network_arn": null,
            "origin": null,
            "region": "us-east-1",
            "route_table_id": "rtb-099cd2925b18bf17d",
            "state": null,
            "timeouts": null,
            "transit_gateway_id": null,
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": null
          },
          "sensitive_attributes": [],
          "index_key": 1
        }
      ],
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "app_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": null,
            "core_network_arn": null,
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "egress_only_gateway_id": null,
            "gateway_id": "igw-024cc6666c26c5be7",
            "id": "682502ad466093073193",
            "instance_id": "0b7fd672e99c86",
            "instance_owner_id": "1bbd4c83d27f9e",
            "local_gateway_id": null,
            "nat_gateway_id": null,
            "network_interface_id": "b715f629b7c950",
            "odb_network_arn": null,
            "origin": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0cd55e8227f0e64b4",
            "state": null,
            "timeouts": null,
            "transit_gateway_id": null,
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "app_to_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": null,
            "core_network_arn": null,
            "destination_cidr_block": "10.20.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "egress_only_gateway_id": null,
            "gateway_id": null,
            "id": "45285ea08b5d52730e18",
            "instance_id": "1206906c6bd423",
            "instance_owner_id": "4dc92b204192a0",
            "local_gateway_id": null,
            "nat_gateway_id": null,
            "network_interface_id": "b056d6652aea72",
            "odb_network_arn": null,
            "origin": null,
            "region": "us-east-1",
            "route_table_id": "rtb-01ec5a542a3ff4dc0",
            "state": null,
            "timeouts": null,
            "transit_gateway_id": "tgw-0712643add85e4d97",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": null
          },
          "sensitive_attributes": [],
          "index_key": 0
        },
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": null,
            "core_network_arn": null,
            "destination_cidr_block": "10.20.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "egress_only_gateway_id": null,
            "gateway_id": null,
            "id": "a6ae5a2e092f83ce3318",
            "instance_id": "96bd29f0f88c68",
            "instance_owner_id": "e57e4a1db001e2",
            "local_gateway_id": null,
            "nat_gateway_id": null,
            "network_interface_id": "74359557d7f1f8",
            "odb_network_arn": null,
            "origin": null,
            "region": "us-east-1",
            "route_table_id": "rtb-099cd2925b18bf17d",
            "state": null,
            "timeouts": null,
            "transit_gateway_id": "tgw-0712643add85e4d97",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": null
          },
          "sensitive_attributes": [],
          "index_key": 1
        }
      ],
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "data_to_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": null,
            "core_network_arn": null,
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "egress_only_gateway_id": null,
            "gateway_id": null,
            "id": "7732a6c6fc42c81fe336",
            "instance_id": "680d2a8ac814a7",
            "instance_owner_id": "031b44e1386290",
            "local_gateway_id": null,
            "nat_gateway_id": null,
            "network_interface_id": "b2581d359200d9",
            "odb_network_arn": null,
            "origin": null,
            "region": "us-east-1",
            "route_table_id": "rtb-000319d7b5d0bae69",
            "state": null,
            "timeouts": null,
            "transit_gateway_id": "tgw-0712643add85e4d97",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:route:us-east-1:123456789012:route_table/rtb-01ec5a542a3ff4dc0",
            "id": "rtb-01ec5a542a3ff4dc0",
            "owner_id": "26f00addfd4cf0",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "estate-app-private-us-east-1a"
            },
            "tags_all": {
              "Name": "estate-app-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d727340b00ba37c7"
          },
          "sensitive_attributes": [],
          "index_key": 0
        },
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:route:us-east-1:123456789012:route_table/rtb-099cd2925b18bf17d",
            "id": "rtb-099cd2925b18bf17d",
            "owner_id": "4d70c359b69a5d",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "estate-app-private-us-east-1b"
            },
            "tags_all": {
              "Name": "estate-app-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d727340b00ba37c7"
          },
          "sensitive_attributes": [],
          "index_key": 1
        }
      ],
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:route:us-east-1:123456789012:route_table/rtb-0cd55e8227f0e64b4",
            "id": "rtb-0cd55e8227f0e64b4",
            "owner_id": "94050f441a4162",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "estate-app-public"
            },
            "tags_all": {
              "Name": "estate-app-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d727340b00ba37c7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:route:us-east-1:123456789012:route_table/rtb-000319d7b5d0bae69",
            "id": "rtb-000319d7b5d0bae69",
            "owner_id": "e8fcbec8f1b5df",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "estate-data"
            },
            "tags_all": {
              "Name": "estate-data"
            },
            "timeouts": null,
            "vpc_id": "vpc-034177ef24c4ac66e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc9586f5c8cc351e",
            "region": "us-east-1",
            "route_table_id": "rtb-01ec5a542a3ff4dc0",
            "subnet_id": "subnet-04e484eb0475311c8"
          },
          "index_key": 0
        },
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0536e17f8c09f1a6c",
            "region": "us-east-1",
            "route_table_id": "rtb-099cd2925b18bf17d",
            "subnet_id": "subnet-0e1f448daada6aa2b"
          },
          "index_key": 1
        }
      ],
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb87a523b85cb726",
            "region": "us-east-1",
            "route_table_id": "rtb-0cd55e8227f0e64b4",
            "subnet_id": "subnet-0c8de3fa67400178a"
          },
          "index_key": 0
        },
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e9fca428732d923",
            "region": "us-east-1",
            "route_table_id": "rtb-0cd55e8227f0e64b4",
            "subnet_id": "subnet-057e2d26fd8dc1046"
          },
          "index_key": 1
        }
      ],
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d385279f85910fd5",
            "region": "us-east-1",
            "route_table_id": "rtb-000319d7b5d0bae69",
            "subnet_id": "subnet-0faf97c7736988f3c"
          },
          "index_key": 0
        },
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080fabbc00d434af9",
            "region": "us-east-1",
            "route_table_id": "rtb-000319d7b5d0bae69",
            "subnet_id": "subnet-0855b1ea6d058ca3d"
          },
          "index_key": 1
        }
      ],
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:security:us-east-1:123456789012:security_group/sg-0f4e14e106d7ef990",
            "description": "Application tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4e14e106d7ef990",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08ceb6078c7bc0c9f"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "estate-app",
            "name_prefix": null,
            "owner_id": "062b8ff9b3a024",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "estate-app"
            },
            "tags_all": {
              "Name": "estate-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d727340b00ba37c7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:security:us-east-1:123456789012:security_group/sg-0e0e924001a60a21c",
            "description": "Redis",
            "egress": [],
            "id": "sg-0e0e924001a60a21c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f4e14e106d7ef990"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "estate-cache",
            "name_prefix": null,
            "owner_id": "f86a06c400ebe0",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "estate-cache"
            },
            "tags_all": {
              "Name": "estate-cache"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d727340b00ba37c7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:security:us-east-1:123456789012:security_group/sg-05dff8a3790b9c8bd",
            "description": "Databases",
            "egress": [],
            "id": "sg-05dff8a3790b9c8bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "estate-db",
            "name_prefix": null,
            "owner_id": "d23e43bf504670",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "estate-db"
            },
            "tags_all": {
              "Name": "estate-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-034177ef24c4ac66e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "edge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:security:us-east-1:123456789012:security_group/sg-08ceb6078c7bc0c9f",
            "description": "Public ingress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ceb6078c7bc0c9f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "estate-edge",
            "name_prefix": null,
            "owner_id": "b216ccad0d8894",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "estate-edge"
            },
            "tags_all": {
              "Name": "estate-edge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d727340b00ba37c7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "files",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:security:us-east-1:123456789012:security_group/sg-0c9dae5f54acce97e",
            "description": "EFS",
            "egress": [],
            "id": "sg-0c9dae5f54acce97e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f4e14e106d7ef990"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "estate-files",
            "name_prefix": null,
            "owner_id": "df461261db2cc7",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "estate-files"
            },
            "tags_all": {
              "Name": "estate-files"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d727340b00ba37c7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:subnet:us-east-1:123456789012:subnet/subnet-04e484eb0475311c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "6aa59bb24c388f",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e484eb0475311c8",
            "ipv6_cidr_block_association_id": "9ebdb8b60cd42e",
            "ipv6_native": false,
            "map_public_ip_on_launch": false,
            "owner_id": "3dc8e93ac31827",
            "region": "us-east-1",
            "tags": {
              "Name": "estate-app-private-us-east-1a"
            },
            "tags_all": {
              "Name": "estate-app-private-us-east-1a"
            },
            "vpc_id": "vpc-0d727340b00ba37c7"
          },
          "index_key": 0
        },
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:subnet:us-east-1:123456789012:subnet/subnet-0e1f448daada6aa2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "69e07b21c14435",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1f448daada6aa2b",
            "ipv6_cidr_block_association_id": "bc581ec7324001",
            "ipv6_native": false,
            "map_public_ip_on_launch": false,
            "owner_id": "98836dadc19d78",
            "region": "us-east-1",
            "tags": {
              "Name": "estate-app-private-us-east-1b"
            },
            "tags_all": {
              "Name": "estate-app-private-us-east-1b"
            },
            "vpc_id": "vpc-0d727340b00ba37c7"
          },
          "index_key": 1
        }
      ],
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:subnet:us-east-1:123456789012:subnet/subnet-0c8de3fa67400178a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "5939bed5868e53",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8de3fa67400178a",
            "ipv6_cidr_block_association_id": "41cf7af2448e4a",
            "ipv6_native": false,
            "map_public_ip_on_launch": true,
            "owner_id": "9b1ddd1ba23341",
            "region": "us-east-1",
            "tags": {
              "Name": "estate-app-public-us-east-1a"
            },
            "tags_all": {
              "Name": "estate-app-public-us-east-1a"
            },
            "vpc_id": "vpc-0d727340b00ba37c7"
          },
          "index_key": 0
        },
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:subnet:us-east-1:123456789012:subnet/subnet-057e2d26fd8dc1046",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "27eb4b23dc8e31",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057e2d26fd8dc1046",
            "ipv6_cidr_block_association_id": "1a6a3de78ed02f",
            "ipv6_native": false,
            "map_public_ip_on_launch": true,
            "owner_id": "4eb1f9b3afdc5e",
            "region": "us-east-1",
            "tags": {
              "Name": "estate-app-public-us-east-1b"
            },
            "tags_all": {
              "Name": "estate-app-public-us-east-1b"
            },
            "vpc_id": "vpc-0d727340b00ba37c7"
          },
          "index_key": 1
        }
      ],
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:subnet:us-east-1:123456789012:subnet/subnet-0faf97c7736988f3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "21dc4f00449835",
            "cidr_block": "10.20.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0faf97c7736988f3c",
            "ipv6_cidr_block_association_id": "004c3d1c9edc9b",
            "ipv6_native": false,
            "map_public_ip_on_launch": false,
            "owner_id": "7152b26c9ebfdc",
            "region": "us-east-1",
            "tags": {
              "Name": "estate-data-us-east-1a"
            },
            "tags_all": {
              "Name": "estate-data-us-east-1a"
            },
            "vpc_id": "vpc-034177ef24c4ac66e"
          },
          "index_key": 0
        },
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:subnet:us-east-1:123456789012:subnet/subnet-0855b1ea6d058ca3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "bb9c7ff14bfb3d",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0855b1ea6d058ca3d",
            "ipv6_cidr_block_association_id": "0fbe2de853455f",
            "ipv6_native": false,
            "map_public_ip_on_launch": false,
            "owner_id": "a5534755f27a83",
            "region": "us-east-1",
            "tags": {
              "Name": "estate-data-us-east-1b"
            },
            "tags_all": {
              "Name": "estate-data-us-east-1b"
            },
            "vpc_id": "vpc-034177ef24c4ac66e"
          },
          "index_key": 1
        }
      ],
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:vpc:us-east-1:123456789012:vpc/vpc-0d727340b00ba37c7",
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "ef15a8145ac69c",
            "default_route_table_id": "49036b9d6d3557",
            "default_security_group_id": "a4fb0f3a18c84d",
            "dhcp_options_id": "a65c0cbbf95d63",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d727340b00ba37c7",
            "instance_tenancy": "default",
            "ipv6_association_id": "8c310c5d2bf87a",
            "main_route_table_id": "64fc77cfa6af72",
            "owner_id": "b7e1c2fd5a3c1b",
            "region": "us-east-1",
            "tags": {
              "Name": "estate-app"
            },
            "tags_all": {
              "Name": "estate-app"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:vpc:us-east-1:123456789012:vpc/vpc-034177ef24c4ac66e",
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "0e76f92ff2e55e",
            "default_route_table_id": "c20e59d234bbad",
            "default_security_group_id": "7e3bffe969c948",
            "dhcp_options_id": "20aaf347af6c9e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-034177ef24c4ac66e",
            "instance_tenancy": "default",
            "ipv6_association_id": "9a1c3523cf7262",
            "main_route_table_id": "6b80fdeaaa66cf",
            "owner_id": "e8830e9bbabeae",
            "region": "us-east-1",
            "tags": {
              "Name": "estate-data"
            },
            "tags_all": {
              "Name": "estate-data"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:vpc:us-east-1:123456789012:vpc_endpoint/vpce-0da3874b3e851419a",
            "id": "vpce-0da3874b3e851419a",
            "owner_id": "b3dade9493720e",
            "prefix_list_id": "c8ad23f936e73c",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01ec5a542a3ff4dc0",
              "rtb-099cd2925b18bf17d"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "tags": {
              "Name": "estate-s3"
            },
            "tags_all": {
              "Name": "estate-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0d727340b00ba37c7"
          }
        }
      ]
    }
  ]
}